force-app/main/default/objects/CD_Property__c/fields/CD_Title_Arabic__c.field-meta.xml
<CustomField>
    <fullName>CD_Title_Arabic__c</fullName>
    <label>Title(Arabic)</label>
    <type>TextArea</type>
</CustomField>