force-app/main/default/objects/CD_Property__c/fields/CD_Tower__c.field-meta.xml
<CustomField>
    <fullName>CD_Tower__c</fullName>
    <label>Tower</label>
    <length>100</length>
    <type>Text</type>
</CustomField>