force-app/main/default/objects/CD_Property__c/fields/CD_uaefield_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefield_Developer_Name__c</fullName>
    <formula>CD_uaefields_Developer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Name</label>
    <type>Text</type>
</CustomField>