force-app/main/default/objects/CD_Property__c/fields/CD_uaefield_Propertyfinder_Region__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefield_Propertyfinder_Region__c</fullName>
    <label>Propertyfinder_Region</label>
    <type>TextArea</type>
</CustomField>