force-app/main/default/objects/CD_Property__c/fields/CD_uaefield_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefield_Service_Charge__c</fullName>
    <label>Service Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>