force-app/main/default/objects/CD_Property__c/fields/CD_uaefield_Sub_Community_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefield_Sub_Community_Propertyfinder__c</fullName>
    <label>Sub Community - Propertyfinder</label>
    <type>TextArea</type>
</CustomField>