force-app/main/default/objects/CD_Property__c/fields/CD_uaefields_Broker_s_Listing_ID__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefields_Broker_s_Listing_ID__c</fullName>
    <label>Broker&apos;s Listing ID</label>
    <type>TextArea</type>
</CustomField>