force-app/main/default/objects/CD_Property__c/fields/CD_uaefields_City_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefields_City_Propertyfinder__c</fullName>
    <label>City - Propertyfinder</label>
    <type>TextArea</type>
</CustomField>