force-app/main/default/objects/CD_Property__c/fields/CD_uaefields_Commercial_Amenities__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefields_Commercial_Amenities__c</fullName>
    <label>Commercial Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Covered Parking</fullName>
            </value>
            <value>
                <fullName>Available Furnished</fullName>
            </value>
            <value>
                <fullName>Availabe Networked</fullName>
            </value>
            <value>
                <fullName>Shared Gym</fullName>
            </value>
            <value>
                <fullName>Shared Spa</fullName>
            </value>
            <value>
                <fullName>Dining in Building</fullName>
            </value>
            <value>
                <fullName>Retail in Building</fullName>
            </value>
            <value>
                <fullName>View of Water</fullName>
            </value>
            <value>
                <fullName>View of Landmark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>