force-app/main/default/objects/CD_Property__c/fields/CD_uaefields_Community_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefields_Community_Propertyfinder__c</fullName>
    <label>Community - Propertyfinder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>