force-app/main/default/objects/CD_Property__c/fields/CD_uaefields_Description_Arabic_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefields_Description_Arabic_pb__c</fullName>
    <label>Description (Arabic)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>