force-app/main/default/objects/CD_Property__c/fields/CD_uaefields_Developer__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefields_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Propertys</relationshipName>
    <type>Lookup</type>
</CustomField>