force-app/main/default/objects/CD_Property__c/fields/CD_uaefields_Floor__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefields_Floor__c</fullName>
    <label>Floor</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>