force-app/main/default/objects/CD_Property__c/fields/CD_uaefields_Locationtext_Dubizzle__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefields_Locationtext_Dubizzle__c</fullName>
    <label>Locationtext - Dubizzle</label>
    <type>TextArea</type>
</CustomField>