force-app/main/default/objects/CD_Property__c/fields/CD_uaefields_View__c.field-meta.xml
<CustomField>
    <fullName>CD_uaefields_View__c</fullName>
    <label>View</label>
    <length>154</length>
    <type>Text</type>
</CustomField>