force-app/main/default/objects/CD_Property__c/fields/CD_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>CD_Unit_Number__c</fullName>
    <label>Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>