force-app/main/default/objects/CD_Property__c/fields/CD_Unit_Price_AED__c.field-meta.xml
<CustomField>
    <fullName>CD_Unit_Price_AED__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Unit Price AED</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>