force-app/main/default/objects/CD_Property__c/fields/CD_Unit_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>CD_Unit_Price_USD__c</fullName>
    <businessOwnerUser>sp@sothebysrealty.ae</businessOwnerUser>
    <complianceGroup>GDPR</complianceGroup>
    <label>Unit Price USD</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>