force-app/main/default/objects/CD_Property__c/fields/CD_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>CD_Unit_Type__c</fullName>
    <label>Unit Type</label>
    <length>24</length>
    <type>Text</type>
</CustomField>