force-app/main/default/objects/CD_Property__c/fields/CD_Units__c.field-meta.xml
<CustomField>
    <fullName>CD_Units__c</fullName>
    <label>Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>