force-app/main/default/objects/CD_Property__c/fields/CD_User__c.field-meta.xml
<CustomField>
    <fullName>CD_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>