force-app/main/default/objects/CD_Property__c/fields/CD_VAT_5__c.field-meta.xml
<CustomField>
    <fullName>CD_VAT_5__c</fullName>
    <formula>CD_Sales_Price__c  * 5 / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT (5%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>