force-app/main/default/objects/CD_Property__c/fields/CD_View__c.field-meta.xml
<CustomField>
    <fullName>CD_View__c</fullName>
    <label>View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1-bed Type A</fullName>
            </value>
            <value>
                <fullName>1-bed Type B</fullName>
            </value>
            <value>
                <fullName>2-bed Duplex Type 2A</fullName>
            </value>
            <value>
                <fullName>2-bed Duplex Type 2B</fullName>
            </value>
            <value>
                <fullName>2-bed Duplex Type 2C</fullName>
            </value>
            <value>
                <fullName>2-bed Duplex Type 2D</fullName>
            </value>
            <value>
                <fullName>2-bed Type A</fullName>
            </value>
            <value>
                <fullName>2-bed Type B</fullName>
            </value>
            <value>
                <fullName>2-bed Type C</fullName>
            </value>
            <value>
                <fullName>2-bed Type D</fullName>
            </value>
            <value>
                <fullName>2-bed Type E</fullName>
            </value>
            <value>
                <fullName>2-bed Type F</fullName>
            </value>
            <value>
                <fullName>2-bed Type H</fullName>
            </value>
            <value>
                <fullName>2-bed Type J</fullName>
            </value>
            <value>
                <fullName>3-bed Duplex Type 3A</fullName>
            </value>
            <value>
                <fullName>3-bed Type A</fullName>
            </value>
            <value>
                <fullName>3-bed Type B</fullName>
            </value>
            <value>
                <fullName>3-bed Type C</fullName>
            </value>
            <value>
                <fullName>3-bed Type D</fullName>
            </value>
            <value>
                <fullName>3-bed Type E</fullName>
            </value>
            <value>
                <fullName>4-bed Duplex Type 4A</fullName>
            </value>
            <value>
                <fullName>4-bed Duplex Type 4B</fullName>
            </value>
            <value>
                <fullName>ADGM SQUARE</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf / DIFC Burj Khalifa</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf / The Dubai Frame</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf / The Dubai Frame / Zaabeel</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf &amp; Burj Khalifa</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf &amp; The Dubai Frame</fullName>
            </value>
            <value>
                <fullName>Beach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>