force-app/main/default/objects/CD_Property__c/fields/CD_Year_Build_text__c.field-meta.xml
<CustomField>
    <fullName>CD_Year_Build_text__c</fullName>
    <formula>Text(CD_Year_Built__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build Year</label>
    <type>Text</type>
</CustomField>