force-app/main/default/objects/CD_Property__c/fields/CD_Year_Built__c.field-meta.xml
<CustomField>
    <fullName>CD_Year_Built__c</fullName>
    <label>Year Built</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>