force-app/main/default/objects/CD_Property__c/fields/CD_Year_Built_Text__c.field-meta.xml
<CustomField>
    <fullName>CD_Year_Built_Text__c</fullName>
    <label>Year Built</label>
    <length>4</length>
    <type>Text</type>
</CustomField>