force-app/main/default/objects/CD_Property__c/fields/CD_Zip_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_Zip_pb__c</fullName>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>