force-app/main/default/objects/CD_Property__c/fields/CDDate_the_reservation_fees_will_be_paid__c.field-meta.xml
<CustomField>
    <fullName>CDDate_the_reservation_fees_will_be_paid__c</fullName>
    <label>Date the reservation fees will be paid</label>
    <type>Date</type>
</CustomField>