force-app/main/default/objects/CD_Property__c/fields/Commission_Status__c.field-meta.xml
<CustomField>
    <fullName>Commission_Status__c</fullName>
    <label>Commission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commission_Status</valueSetName>
    </valueSet>
</CustomField>