force-app/main/default/objects/CD_Property__c/fields/Dld_Fee__c.field-meta.xml
<CustomField>
    <fullName>Dld_Fee__c</fullName>
    <description>This is Amount of 4% of Sales Price and
Final Net Price is the Difference of Net_selling_price to the Discount.</description>
    <formula>(4*CD_Sales_Price__c)/100</formula>
    <inlineHelpText>Need to fill sales price field to get value..</inlineHelpText>
    <label>Dld Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>