force-app/main/default/objects/CD_Property__c/fields/DLD_Fee_Collected__c.field-meta.xml
<CustomField>
    <fullName>DLD_Fee_Collected__c</fullName>
    <description>This is Lookup collection Drls field of Sum of Amount where Payment_Type__c= &apos;DLD fees&apos; .</description>
    <inlineHelpText>Drls Aggregate Result Field of Sum of Amount where Payment Type= &apos;DLD fees&apos; .</inlineHelpText>
    <label>DLD Fee Collected</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>