force-app/main/default/objects/CD_Property__c/fields/DLD_Fee_collecteds__c.field-meta.xml
<CustomField>
    <fullName>DLD_Fee_collecteds__c</fullName>
    <description>This is Formula percent field of Dld Fee Collected Aggregate Result Field upon Dld Fee Formula field.
where,
Dld Fee = 4% of Final Net price .</description>
    <formula>(DLD_Fee_Collected__c/Dld_Fee__c )</formula>
    <inlineHelpText>Need to fill Dld Fee Collected and Dld fee field to get  this value..</inlineHelpText>
    <label>DLD Fee collected (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>