force-app/main/default/objects/CD_Property__c/fields/Floor_Type__c.field-meta.xml
<CustomField>
    <fullName>Floor_Type__c</fullName>
    <label>Floor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Floor</fullName>
            </value>
            <value>
                <fullName>Low Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>