force-app/main/default/objects/CD_Property__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry</label>
    <referenceTo>pba__Request__c</referenceTo>
    <relationshipLabel>Unit</relationshipLabel>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>