force-app/main/default/objects/CD_Property__c/fields/Is_Lux_Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Lux_Job_Completed__c</fullName>
    <formula>IF(Amount_Colleted__c  &gt; CD_Project__r.Job_Completion__c,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The price Collected is Greater to Project Job Completion than then Box Checked.</inlineHelpText>
    <label>Is Lux Job Completed?</label>
    <type>Checkbox</type>
</CustomField>