force-app/main/default/objects/CD_Property__c/fields/Is_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Open__c</fullName>
    <description>If Status = Available Then True Is Open
Else If Status = Registered Then True Is Open
Else If Status = Commission Then True Is Open
Else If Status = Closed Then True Is Open</description>
    <formula>(IF( OR(
ISPICKVAL( Status__c ,&apos;Available&apos;),
ISPICKVAL( Status__c ,&apos;Registered DLD&apos;),
ISPICKVAL( Status__c ,&apos;Commission&apos;),
ISPICKVAL( Status__c ,&apos;Closed&apos;)
),True,False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based On Status Display Is Open Checkbox</inlineHelpText>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>