force-app/main/default/objects/CD_Property__c/fields/Is_Show_in_Public_Link__c.field-meta.xml
<CustomField>
    <fullName>Is_Show_in_Public_Link__c</fullName>
    <label>Is Show in Public Link?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>