force-app/main/default/objects/CD_Property__c/fields/No_of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bedrooms__c</fullName>
    <formula>LEFT( CD_Bedrooms__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Bedrooms</label>
    <type>Text</type>
</CustomField>