force-app/main/default/objects/CD_Property__c/fields/of_Reservation_Fees_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>of_Reservation_Fees_to_be_paid__c</fullName>
    <label>% of Reservation Fees to be paid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>