force-app/main/default/objects/CD_Property__c/fields/Other_Fee_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_Description__c</fullName>
    <label>Other Fee Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>