force-app/main/default/objects/CD_Property__c/fields/Payment_Collection__c.field-meta.xml
<CustomField>
    <fullName>Payment_Collection__c</fullName>
    <label>Payment Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>10% + 4%</fullName>
            </value>
            <value>
                <fullName>100% + 4%</fullName>
            </value>
            <value>
                <fullName>20% + 4% Received By Developer</fullName>
            </value>
            <value>
                <fullName>20% + 4% Sent to Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>