force-app/main/default/objects/CD_Property__c/fields/Pipeline_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Status_Date__c</fullName>
    <label>Pipeline Status Date</label>
    <type>Date</type>
</CustomField>