force-app/main/default/objects/CD_Property__c/fields/Private_Sales_price__c.field-meta.xml
<CustomField>
    <fullName>Private_Sales_price__c</fullName>
    <label>Private Sales price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>