force-app/main/default/objects/CD_Property__c/fields/Project1__c.field-meta.xml
<CustomField>
    <fullName>Project1__c</fullName>
    <formula>CD_Project__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>