force-app/main/default/objects/CD_Property__c/fields/Project_Admin__c.field-meta.xml
<CustomField>
    <fullName>Project_Admin__c</fullName>
    <formula>CD_Project__r.Project_Admin__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Admin</label>
    <type>Text</type>
</CustomField>