force-app/main/default/objects/CD_Property__c/fields/Project_Approver__c.field-meta.xml
<CustomField>
    <fullName>Project_Approver__c</fullName>
    <formula>CD_Project__r.Project_Approver__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Approver</label>
    <type>Text</type>
</CustomField>