force-app/main/default/objects/CD_Property__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>CD_Project__r.Name</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>