force-app/main/default/objects/CD_Property__c/fields/Red_Listed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Red_Listed_Date_Time__c</fullName>
    <label>Red Listed Date Time</label>
    <type>DateTime</type>
</CustomField>